# GeKon

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  circle.yml  gekon.txt  gk_functions.cpp  gk_functions.h  gk_operators.h  gk_utils.h  install-opencv.sh  longrun.sh  main.cpp  octave-workspace  ranksel-longrun.toml  roulette-longrun.toml  tests.toml  tournament-longrun.toml
docs/: gekon.tex  notes.md  vyhodnoceni.md
eval_results/: compare_time.sh
gekon/: CMakeLists.txt  SSIM.cpp  SSIM.h  automated_tests.cpp  gk_Worker.cpp  gk_Worker.h  gk_functions.cpp  gk_functions.h  gk_operators.cpp  gk_operators.h  gk_types.h  gk_utils.cpp  gk_utils.h  main.cpp  playground.cpp
output/: purpose.md
samples/: kernels.txt
src/: CMakeLists.txt  gk_functions.h  gk_utils.h
tests/: CMakeLists.txt  README.md  first_test.cpp  gk_utils_test.cpp  selection_test.cpp
